--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,16 @@
   }
 }
 
+
+@keyframes flip {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
