--- a/app/globals.css
+++ b/app/globals.css
@@ -2,4 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
+@keyframes flip {
+	0% {
+	  transform: rotateY(0deg);
+	}
+	100% {
+	  transform: rotateY(360deg);
+	}
+  }
